--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Preact + TS</title>
+    <title>cycl3d</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class='bg-base-100 max-h-screen h-screen flex flex-col'></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
